--- a/truffle/Makefile
+++ b/truffle/Makefile
@@ -19,7 +19,11 @@ lint-sol:
 
 run-testrpc:
 	@ps -a -o args | grep "^node .*testrpc.*8544" || \
-		./node_modules/.bin/testrpc --port 8544 --network-id 9 --gasLimit 0x669f97
+		@ganache-cli --port 8544 --network-id 9 --gasLimit 0x669f97
+
+run-testrpc-local:
+	@ps -a -o args | grep "^node .*testrpc.*8544" || \
+		@./node_modules/.bin/ganache-cli --port 8544 --network-id 9 --gasLimit 0x669f97
 
 test:
 	@./node_modules/.bin/truffle test
