truffle: complete smart contracts

--- a/truffle/package.json
+++ b/truffle/package.json
@@ -27,10 +27,8 @@
     "globals": [
       "assert",
       "artifacts",
-      "contract"
-    ],
-    "plugins": [
-      "flowtype"
+      "contract",
+      "web3"
     ]
   }
 }
